--- a/test-app/demo-app.yaml
+++ b/test-app/demo-app.yaml
@@ -82,5 +82,5 @@ spec:
       targetPort: 80
   selector:
     workload.user.cattle.io/workloadselector: apps.deployment-default-demo-app
-  type: ClusterIP
+  type: LoadBalancer
           
