--- a/el-cluster/create-cluster.yaml
+++ b/el-cluster/create-cluster.yaml
@@ -42,6 +42,8 @@ metadata:
 spec:
   rkeConfig:
     machineGlobalConfig:
+      disable:
+        - servicelb
       etcd-expose-metrics: false
       profile: null
     machinePools:
