--- a/el-cluster/create-cluster.yaml
+++ b/el-cluster/create-cluster.yaml
@@ -57,16 +57,16 @@ spec:
         quantity: 1
         unhealthyNodeTimeout: 0s
         workerRole: true
-      - controlPlaneRole: false
-        etcdRole: false
-        machineConfigRef:
-          apiVersion: elemental.cattle.io/v1beta1
-          kind: MachineInventorySelectorTemplate
-          name: worker-selector
-        name: worker-pool
-        quantity: 1
-        unhealthyNodeTimeout: 0s
-        workerRole: true
+#      - controlPlaneRole: false
+#        etcdRole: false
+#        machineConfigRef:
+#          apiVersion: elemental.cattle.io/v1beta1
+#          kind: MachineInventorySelectorTemplate
+#          name: worker-selector
+#        name: worker-pool
+#        quantity: 1
+#        unhealthyNodeTimeout: 0s
+#        workerRole: true
     machineSelectorConfig:
       - config:
           protect-kernel-defaults: false
