--- a/metallb/fleet.yaml
+++ b/metallb/fleet.yaml
@@ -1,6 +1,6 @@
 defaultNamespace: metallb-system
 helm:
   releaseName: metallb
-  repo: https://metallb.github.io/metallb
+  repo: oci://registry.suse.com/edge/3.2/metallb-chart 
   chart: metallb
 
