--- a/test-app/demo-app.yaml
+++ b/test-app/demo-app.yaml
@@ -1,3 +1,21 @@
+apiVersion: metallb.io/v1beta1
+kind: IPAddressPool
+metadata:
+  name: pool1
+  namespace: metallb-system
+spec:
+  addresses:
+  - 192.168.8.30/31
+---
+apiVersion: metallb.io/v1beta1
+kind: L2Advertisement
+metadata:
+  name: pool1
+  namespace: metallb-system
+spec:
+  ipAddressPools:
+  -  pool1
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
