--- a/os-upgrade/os-upgrade.yaml
+++ b/os-upgrade/os-upgrade.yaml
@@ -1,8 +1,6 @@
 apiVersion: elemental.cattle.io/v1beta1
 kind: ManagedOSImage
 metadata:
-  labels:
-    elemental.cattle.io/managed-os-version-name: baremetal-v2.1.3-4.37-os
   name: os-upgrade-test
   namespace: fleet-default
 spec:
@@ -13,4 +11,4 @@ spec:
     force: true
     ignoreDaemonSets: true
     skipWaitForDeleteTimeout: 60
-  managedOSVersionName: baremetal-v2.1.3-4.37-os
+  managedOSVersion: baremetal-v2.1.3-4.37-os
