--- a/el-cluster/create-cluster.yaml
+++ b/el-cluster/create-cluster.yaml
@@ -35,7 +35,7 @@ spec:
 kind: Cluster
 apiVersion: provisioning.cattle.io/v1
 metadata:
-  name: test-el-cluster1
+  name: test-el-cluster
   namespace: fleet-default
   labels:
     site: test
