--- a/el-cluster/create-cluster.yaml
+++ b/el-cluster/create-cluster.yaml
@@ -38,7 +38,8 @@ metadata:
   name: test-el-cluster
   namespace: fleet-default
   labels:
-    site: test
+    demo-app: deploy
+    metalllb: deploy
 spec:
   rkeConfig:
     machineGlobalConfig:
